--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
                     <p><h5>Бриллиант (природный)<br>134 шт, 0.081 карат
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
                 </div>
             </div>
             <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
@@ -64,7 +64,7 @@
                     <p><h5>Родированное серебро 925 пробы<br>2.48 г<br>Топаз (2 шт, 1.867 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
                 </div>
             </div>
             <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
@@ -81,7 +81,7 @@
                     <p><h5>Красное золото 585 пробы<br>0.91 г<br>Бриллиант (природный) (23 шт, 0.067 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
                 </div>
             </div>
         </div>
