--- a/favorite.html
+++ b/favorite.html
@@ -59,7 +59,7 @@
                 <div class="additional-info">
                     <p><h5>Белое золото 585 пробы<br>1.66 г<br>Бриллиант (природный) (6 шт, 0.047 карат)
                     </h5></p>
-                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-favorite" onclick="addToFavorites(event)">Удалить из избранного</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
